# desktop-automation-task

./: .gitignore  INSTRUCTIONS.MD  README.md  pyproject.toml
src/: automation.py  grounder.py  main.py  planner.py  recursive_search.py  scoring.py  screenshot.py  verifier.py
src/screenseeker/: grounder.py  planner.py  recursive_search.py  scoring.py  verifier.py  visualizer.py
